--- a/CSS/index.css
+++ b/CSS/index.css
@@ -2,6 +2,30 @@ body{
     background-color: rgb(239, 209, 198);
     
 }
+
+.navbar-nav {
+    flex-direction: row;
+
+    .dropdown-menu{
+      position: absolute;
+    }
+}
+
+
+
+.navbar-nav-scroll {
+  overflow: visible;
+}
+
+.navbar-collapse {
+  display: flex !important;
+  flex-basis: auto;
+}
+
+.navbar-toggler {
+  display: none;
+}
+
 .mt-3{
     margin:15px;
 }
