--- a/CSS/Home.css
+++ b/CSS/Home.css
@@ -3,9 +3,26 @@
   margin: 0px;
   font: italic small-caps bold 16px/2;
 }
-body{
-    background-color: rgb(239, 209, 198);
-    
+body {
+  color: black;
+  background-color: rgb(241, 241, 241);
+  text-align: center;
+  justify-content: center;
+}
+.dark-theme {
+  color: white;
+  background-color: rgb(26, 20, 20);
+}
+button {
+  width: 13rem;
+  height: 2rem;
+  font-size: 1.5rem;
+  background-color: aqua;
+  border: none;
+  border-radius: 12px;
+}
+p {
+  font-size: 1.2rem;
 }
 
 .navbar-nav {
@@ -30,13 +47,17 @@ body{
 .navbar-toggler {
   display: none;
 }
+#icon{
+  width:30px;
+  cursor: pointer;
+}
 
 .mt-3{
     margin:15px;
 }
 .grid-container-fluid .row{
     display: grid;
-    gap:30px 30px;
+    gap:30px 70px;
     grid-template-columns: auto auto auto;
     padding:20px;
 }
@@ -45,13 +66,11 @@ body{
 }
 .grid-container-fluid .row .card{
     box-shadow: 5px 10px 5px #3b2632;
-    transition:all 0.5s;
     cursor:pointer;
+    animation:transformations ease-in-out;
 
 }
 .grid-container-fluid .row .card:hover{
     transform:scale(1.1);
-    /* transform:skewY(30deg);
-    transform:rotate(30deg) */
-    /* transform:translate(100px, 200px) */
+    
 }
